# prism

./: .gitignore  PRISM_BASELINE.md  README.md  package.json  pnpm-lock.yaml
apps/vscode-extension/: .vscodeignore  esbuild.js  package.json  tsconfig.json
apps/vscode-extension/src/: extension.ts  wsClient.ts
apps/workspace/: package.json  tsconfig.json
apps/workspace/src/: App.tsx  main.tsx  styles.css
apps/workspace/src-tauri/: Cargo.toml  tauri.conf.json
apps/workspace/src-tauri/capabilities/: default.json
apps/workspace/src-tauri/icons/: icon.icns
apps/workspace/src-tauri/src/: ipc.rs  lib.rs  main.rs
brand/: README.md  wordmark-dark.html
docs/: PRD.md  open-questions.md  smoke-test.md
